[tool.poetry]
name = "bandcamp-downloader"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
requests = "^2.27.1"
browser-cookie3 = "^0.14.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[tool.black]
required-version = "23.9.1"
target-version = ["py38", "py39", "py310", "py311"]